# general-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  chainlit.md  pyproject.toml
.doc/: ProjectStatus.md
config/: langgraph_studio.json
deployment/docker/: docker-compose.yaml
deployment/docker/images/: webui.Dockerfile
doc/: ProjectStatus.md
scripts/: create_pupulate_langsmith_dataset.py  download_gaia_dataset.py  langgraph_studio.json  langgraph_studio.py
src/api/: app.py  dependency.py
src/api/routes/: chat.py  health.py
src/api/schemas/: chat.py
src/core/llms/: __init__.py  chat_llm.py
src/core/tools/: __init__.py  python_executor_tool.py  web_search_tool.py
src/core/workflows/: __init__.py  general_assistant.py  workflow_factory.py
src/evaluation/: general_assistant_evaluation.py  success_rate_metaevaluation.py  trajectory_metaevaluation.py
src/evaluation/evaluators/: __init__.py  evaluator_factory.py  success_rate_evaluator.py  trajectory_evaluator.py
src/general_assistant/api/: app.py  dependency.py
src/general_assistant/api/routes/: chat.py  health.py
src/general_assistant/api/schemas/: chat_schemas.py  health_schemas.py
src/general_assistant/config/: logger.py  settings.py
src/general_assistant/core/agent/: __init__.py  agent_factory.py
src/general_assistant/core/agent/tools/: __init__.py  python_executor_tool.py  web_search_tool.py
src/general_assistant/core/workflows/: __init__.py  general_assistant_workflow.py
src/general_assistant/utils/: assistant_client.py  langgraph_studio.py
src/models/: chat.py  structured_output.py
src/settings/: base_named_settings.py  llms.py  services.py  tools.py  workflows.py
src/utils/: assistant_client.py  functions.py  logger.py
src/webui/: chainlit_main.py
