[project]
name = "general-assistant"
version = "0.1.0"
description = "Production-ready AI Agent for general use"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
keywords = ["ai", "agent", "assistant", "llm", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi[standard]>=0.115.12",
]
