[project]
name = "general-assistant"
version = "0.1.0"
description = "A general-purpose AI assistant built with FastAPI and LlamaIndex."
authors = [
    {name = "Oleh Borysevych", email = "borysevych.oleh87@gmail.com"},
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "chainlit>=2.5.5",
    "datasets>=3.6.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "huggingface-hub>=0.24.1",
    "llama-index-llms-anthropic>=0.7.2",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "pytest>=8.3.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["B008"]
